added more photos and videos

--- a/locale/en.txt
+++ b/locale/en.txt
@@ -115,6 +115,19 @@ album_EA75D03C_FE43_C3D8_41E1_7563AA10D0A7_6.label = 23425c7e-8252-488f-8537-1e4
 album_EA75D03C_FE43_C3D8_41E1_7563AA10D0A7_7.label = c4e98a2e-2d7c-4c7e-a5d7-2cdf9ab34cd5
 album_EA75D03C_FE43_C3D8_41E1_7563AA10D0A7_8.label = c59a4997-9378-4bb6-86aa-003d11c106ac
 album_EA75D03C_FE43_C3D8_41E1_7563AA10D0A7_9.label = daaf1e50-e196-40b1-8ed1-b9ac736444d2
+album_F132D7C7_FF05_BCFA_41E3_6B7DC0B8EF79.label = Photo Album unnamed (1)
+album_F132D7C7_FF05_BCFA_41E3_6B7DC0B8EF79_0.label = unnamed (1)
+album_F132D7C7_FF05_BCFA_41E3_6B7DC0B8EF79_1.label = unnamed (1)
+album_F132D7C7_FF05_BCFA_41E3_6B7DC0B8EF79_10.label = unnamed
+album_F132D7C7_FF05_BCFA_41E3_6B7DC0B8EF79_11.label = unnamed
+album_F132D7C7_FF05_BCFA_41E3_6B7DC0B8EF79_2.label = unnamed (2)
+album_F132D7C7_FF05_BCFA_41E3_6B7DC0B8EF79_3.label = unnamed (2)
+album_F132D7C7_FF05_BCFA_41E3_6B7DC0B8EF79_4.label = unnamed (3)
+album_F132D7C7_FF05_BCFA_41E3_6B7DC0B8EF79_5.label = unnamed (3)
+album_F132D7C7_FF05_BCFA_41E3_6B7DC0B8EF79_6.label = unnamed (4)
+album_F132D7C7_FF05_BCFA_41E3_6B7DC0B8EF79_7.label = unnamed (5)
+album_F132D7C7_FF05_BCFA_41E3_6B7DC0B8EF79_8.label = unnamed (6)
+album_F132D7C7_FF05_BCFA_41E3_6B7DC0B8EF79_9.label = unnamed (7)
 map_ECE0E4F0_FE42_4C68_41B1_025D3AC1478B.label = Screenshot 2020-06-29 at 10.25.30 AM
 map_EF7A3A00_FE42_47A8_41E5_431A13CB8FD8.label = Screenshot 2020-06-29 at 10.25.46 AM
 panorama_C2763460_C8D2_C448_41C0_A412856F792E.label = 360_8 - Panorama
@@ -126,6 +139,7 @@ panorama_C276F1AA_C8D2_5CD8_41E4_94B49952A776.label = 360_4 - Panorama
 panorama_C27B0EDD_C8D3_C478_41C6_1692119892B3.label = 360_2 - Panorama
 panorama_C32A7917_C8D3_CDC8_41BB_5FA59FE58DF8.label = 360_1 - Panorama
 video_E2ADE04F_FEC6_C3B8_41D0_0B5FCCC23BCE.label = videoplayback (1)
+video_EDB6D288_FF04_5776_41EE_D1832B9A3563.label = videoplayback (1) 2
 
 ## Action
 
